--- a/pry1.html
+++ b/pry1.html
@@ -48,7 +48,7 @@
                         <h2 class="h2 section-title">Primary 1</h2>
 
 
-                        <button class="btn btn-primary"><a href="pry.html">Back Home</a></button>
+                        <button class="btn btn-primary"><a href="pry.html#pry1">Back Home</a></button>
 
                     </div>
 
