--- a/pry2.html
+++ b/pry2.html
@@ -48,7 +48,7 @@
                         <h2 class="h2 section-title">Primary 2</h2>
 
 
-                        <button class="btn btn-primary"><a href="pry.html">Back Home</a></button>
+                        <button class="btn btn-primary"><a href="pry.html#pry2">Back Home</a></button>
 
                     </div>
 
