--- a/pry3.html
+++ b/pry3.html
@@ -48,7 +48,7 @@
                         <h2 class="h2 section-title">Primary 3</h2>
 
 
-                        <button class="btn btn-primary"><a href="pry.html">Back Home</a></button>
+                        <button class="btn btn-primary"><a href="pry.html#pry3">Back Home</a></button>
 
                     </div>
 
@@ -72,13 +72,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=980533256">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Mathematics</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=980533256" class="h4 product-title">Mathematics</a>
 
 
                                     <div class="product-footer">
@@ -111,13 +111,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1777620606">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">English Language</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1777620606" class="h4 product-title">English Language</a>
 
 
 
@@ -151,13 +151,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1893482922">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Quantitative Reasoning</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1893482922" class="h4 product-title">Quantitative Reasoning</a>
 
 
 
@@ -191,13 +191,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=114096253">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Verbal Reasoning</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=114096253" class="h4 product-title">Verbal Reasoning</a>
 
 
 
@@ -231,13 +231,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1737250236">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Basic Science & Technology</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1737250236" class="h4 product-title">Basic Science & Technology</a>
 
 
 
@@ -271,13 +271,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1721057170">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Computer Studies</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1721057170" class="h4 product-title">Computer Studies</a>
 
 
 
@@ -311,13 +311,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1388933204">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">National Values</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1388933204" class="h4 product-title">National Values</a>
 
 
 
@@ -351,13 +351,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1268390826">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Pre-Vocational Studies</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1268390826" class="h4 product-title">Pre-Vocational Studies</a>
 
 
 
@@ -391,13 +391,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1944605033">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Security Education</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1944605033" class="h4 product-title">Security Education</a>
 
 
 
@@ -431,13 +431,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=867905680">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Cultural & Creative Art</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=867905680" class="h4 product-title">Cultural & Creative Art</a>
 
 
 
@@ -471,13 +471,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=645799436">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Caligraphy</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=645799436" class="h4 product-title">Caligraphy</a>
 
 
 
@@ -511,13 +511,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1979494546">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">History</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1979494546" class="h4 product-title">History</a>
 
 
 
@@ -551,13 +551,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=512671689">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Music</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=512671689" class="h4 product-title">Music</a>
 
 
 
@@ -591,13 +591,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href=" https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=853383311">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Language</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=853383311" class="h4 product-title">Yoruba</a>
 
 
 
@@ -631,13 +631,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=246959189">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">French</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=246959189" class="h4 product-title">French</a>
 
 
 
@@ -671,13 +671,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=847683077">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">C.R.K / I.R.K</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=847683077" class="h4 product-title">C.R.K / I.R.K</a>
 
 
 
