--- a/kg.html
+++ b/kg.html
@@ -45,7 +45,7 @@
                         <h2 class="h2 section-title">Subjects</h2>
 
 
-                        <h2 class="h2 section-title">Primary 5</h2>
+                        <h2 class="h2 section-title">Kindergeten</h2>
 
 
                         <button class="btn btn-primary"><a href="pry.html#pry5">Back Home</a></button>
