--- a/tc/pry.html
+++ b/tc/pry.html
@@ -134,14 +134,14 @@
                             <div class="card explore-card">
 
                                 <figure class="card-banner">
-                                    <a href="https://docs.google.com/spreadsheets/d/19GIYyCGNZ3-7C9bGTm0BZmpZEnrbhxp9GmdXCQ49fyk/edit#gid=1496429614">
+                                    <a href="#">
                                         <img src="../assets/images/nur1.jpeg" width="600" height="600" loading="lazy"
                                             alt="Domain Names" class="img-cover">
                                     </a>
                                 </figure>
 
                                 <h3 class="h3 card-title">
-                                    <a href="https://docs.google.com/spreadsheets/d/19GIYyCGNZ3-7C9bGTm0BZmpZEnrbhxp9GmdXCQ49fyk/edit#gid=1496429614">Nursery 1</a>
+                                    <a href="#">Nursery 1</a>
                                 </h3>
 
                                 <span class="card-author">
@@ -243,7 +243,7 @@
                                 </figure>
 
                                 <h3 class="h3 card-title">
-                                    <a href="pry1.html">Primary 1</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/19GIYyCGNZ3-7C9bGTm0BZmpZEnrbhxp9GmdXCQ49fyk/edit#gid=1496429614">Primary 1</a>
                                 </h3>
 
                                 <span class="card-author">
@@ -259,7 +259,7 @@
                                 <button class="btn">
                                     <ion-icon name="bag-add-outline" aria-hidden="true"></ion-icon>
                                 
-                                    <span><a href="pry1.html">Enter Result</a></span>
+                                    <span><a href="https://docs.google.com/spreadsheets/d/19GIYyCGNZ3-7C9bGTm0BZmpZEnrbhxp9GmdXCQ49fyk/edit#gid=1496429614">Enter Comment</a></span>
                                 </button>
 
                             </div>
