--- a/tc/pry.html
+++ b/tc/pry.html
@@ -270,14 +270,14 @@
                             <div class="card explore-card">
 
                                 <figure class="card-banner">
-                                    <a href="pry2.html">
+                                    <a href="https://docs.google.com/spreadsheets/d/1uhaAl_lFa_N2du6QZNqzUVF1IYDWvASUIMTMGgEJS6I/edit#gid=1496429614">
                                         <img src="../assets/images/pry2.jpeg" width="600" height="600" loading="lazy"
                                             alt="Sports" class="img-cover">
                                     </a>
                                 </figure>
 
                                 <h3 class="h3 card-title">
-                                    <a href="pry2.html">Primary 2</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1uhaAl_lFa_N2du6QZNqzUVF1IYDWvASUIMTMGgEJS6I/edit#gid=1496429614">Primary 2</a>
                                 </h3>
 
                                 <span class="card-author">
@@ -293,7 +293,7 @@
                                 <button class="btn">
                                     <ion-icon name="bag-add-outline" aria-hidden="true"></ion-icon>
                                 
-                                    <span><a href="pry2.html">Enter Result</a></span>
+                                    <span><a href="https://docs.google.com/spreadsheets/d/1uhaAl_lFa_N2du6QZNqzUVF1IYDWvASUIMTMGgEJS6I/edit#gid=1496429614">Enter Comment</a></span>
                                 </button>
 
                             </div>
@@ -304,14 +304,14 @@
                             <div class="card explore-card">
 
                                 <figure class="card-banner">
-                                    <a href="pry3.html">
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1496429614">
                                         <img src="../assets/images/pry3.jpeg" width="600" height="600" loading="lazy"
                                             alt="Cartoon Heroes" class="img-cover">
                                     </a>
                                 </figure>
 
                                 <h3 class="h3 card-title">
-                                    <a href="pry3.html">Primary 3</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1496429614">Primary 3</a>
                                 </h3>
 
                                 <span class="card-author">
@@ -327,7 +327,7 @@
                                 <button class="btn">
                                     <ion-icon name="bag-add-outline" aria-hidden="true"></ion-icon>
                                 
-                                    <span><a href="pry3.html">Enter Result</a></span>
+                                    <span><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1496429614">Enter Comment</a></span>
                                 </button>
 
                             </div>
@@ -337,7 +337,7 @@
                             <div class="card explore-card">
 
                                 <figure class="card-banner">
-                                    <a href="pry4.html">
+                                    <a href="#">
                                         <img src="../assets/images/auction-8.jpg" width="600" height="600" loading="lazy"
                                             alt="Gaming Chair" class="img-cover">
                                     </a>
