--- a/nur1.html
+++ b/nur1.html
@@ -48,7 +48,7 @@
                         <h2 class="h2 section-title">Nursery 1</h2>
 
 
-                        <button class="btn btn-primary"><a href="pry.html#">Back Home</a></button>
+                        <button class="btn btn-primary"><a href="pry.html#nur1">Back Home</a></button>
 
                     </div>
 
@@ -72,13 +72,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=980533256">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Number Concept</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=980533256" class="h4 product-title">Number Concept</a>
 
 
                                     <div class="product-footer">
@@ -111,13 +111,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1777620606">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Language Art</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1777620606" class="h4 product-title">Language Art</a>
 
 
 
@@ -151,13 +151,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1893482922">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Practical Life</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1893482922" class="h4 product-title">Practical Life</a>
 
 
 
@@ -191,13 +191,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=114096253">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Discovery</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=114096253" class="h4 product-title">Discovery</a>
 
 
 
@@ -231,13 +231,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1737250236">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Sensorial Activities </a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1737250236" class="h4 product-title">Sensorial Activities </a>
 
 
 
@@ -271,13 +271,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1721057170">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">I.C.T</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1721057170" class="h4 product-title">I.C.T</a>
 
 
 
@@ -311,13 +311,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1388933204">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">T.P.D</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1388933204" class="h4 product-title">T.P.D</a>
 
 
 
@@ -351,13 +351,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1268390826">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Songs & Rhymes</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1268390826" class="h4 product-title">Songs & Rhymes</a>
 
 
 
@@ -391,13 +391,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1944605033">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Story</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=1944605033" class="h4 product-title">Story</a>
 
 
 
@@ -431,13 +431,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=867905680">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Cultural & Creative Art</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=867905680" class="h4 product-title">Cultural & Creative Art</a>
 
 
 
@@ -471,13 +471,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=645799436">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">Physical Health Education </a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=645799436" class="h4 product-title">Physical Health Education </a>
 
 
 
@@ -511,13 +511,13 @@
                                         </button>
                                     </div>
 
-                                    <button class="place-bid-btn"><a href="#">Enter Result</a></button>
+                                    <button class="place-bid-btn"><a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=847683077">Enter Result</a></button>
 
                                 </figure>
 
                                 <div class="product-content">
 
-                                    <a href="#" class="h4 product-title">C.R.K / I.R.K</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1UXu-lYRvAlWfKT3SqlVGbv0VDDZDk3EiXpaE5ZnB2pc/edit#gid=847683077" class="h4 product-title">C.R.K / I.R.K</a>
 
 
 
