--- a/add/pry.html
+++ b/add/pry.html
@@ -304,14 +304,14 @@
                             <div class="card explore-card">
 
                                 <figure class="card-banner">
-                                    <a href="pry3.html">
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1893482922">
                                         <img src="../assets/images/pry3.jpeg" width="600" height="600" loading="lazy"
                                             alt="Cartoon Heroes" class="img-cover">
                                     </a>
                                 </figure>
 
                                 <h3 class="h3 card-title">
-                                    <a href="pry3.html">Primary 3</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1893482922">Primary 3</a>
                                 </h3>
 
                                 <span class="card-author">
@@ -327,7 +327,7 @@
                                 <button class="btn">
                                     <ion-icon name="bag-add-outline" aria-hidden="true"></ion-icon>
                                 
-                                    <span><a href="pry3.html">Enter Result</a></span>
+                                    <span><a href="https://docs.google.com/spreadsheets/d/1aaDFZUAngt3YYJ_HX064JdotDIkbfiHAJE7DzI7jqoo/edit#gid=1893482922">Enter Result</a></span>
                                 </button>
 
                             </div>
