--- a/nur2.html
+++ b/nur2.html
@@ -157,7 +157,7 @@
 
                                 <div class="product-content">
 
-                                    <a href="https://docs.google.com/spreadsheets/d/1ZhpXlJXTbfgctlhd6qvNIZMLTzWRJ7iRAs1ZwGfZ7sM/edit#gid=1893482922" class="h4 product-title">Practical Life</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1ZhpXlJXTbfgctlhd6qvNIZMLTzWRJ7iRAs1ZwGfZ7sM/edit#gid=1893482922" class="h4 product-title">Quantitative</a>
 
 
 
@@ -197,7 +197,7 @@
 
                                 <div class="product-content">
 
-                                    <a href="https://docs.google.com/spreadsheets/d/1ZhpXlJXTbfgctlhd6qvNIZMLTzWRJ7iRAs1ZwGfZ7sM/edit#gid=114096253" class="h4 product-title">Discovery</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1ZhpXlJXTbfgctlhd6qvNIZMLTzWRJ7iRAs1ZwGfZ7sM/edit#gid=114096253" class="h4 product-title">Verbal</a>
 
 
 
@@ -237,7 +237,7 @@
 
                                 <div class="product-content">
 
-                                    <a href="https://docs.google.com/spreadsheets/d/1ZhpXlJXTbfgctlhd6qvNIZMLTzWRJ7iRAs1ZwGfZ7sM/edit#gid=1737250236" class="h4 product-title">Sensorial Activities </a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1ZhpXlJXTbfgctlhd6qvNIZMLTzWRJ7iRAs1ZwGfZ7sM/edit#gid=1737250236" class="h4 product-title">Pre science</a>
 
 
 
@@ -317,7 +317,7 @@
 
                                 <div class="product-content">
 
-                                    <a href="https://docs.google.com/spreadsheets/d/1ZhpXlJXTbfgctlhd6qvNIZMLTzWRJ7iRAs1ZwGfZ7sM/edit#gid=1388933204" class="h4 product-title">T.P.D</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1ZhpXlJXTbfgctlhd6qvNIZMLTzWRJ7iRAs1ZwGfZ7sM/edit#gid=1388933204" class="h4 product-title">Social skill</a>
 
 
 
