--- a/add/pry.html
+++ b/add/pry.html
@@ -101,14 +101,14 @@
                             <div class="card explore-card">
 
                                 <figure class="card-banner">
-                                    <a href="#">
+                                    <a href="https://docs.google.com/spreadsheets/d/1HPIPWDtYy9zlKF2Hz45iTSQ7F6udZZdT_TrXvHOjowg/edit#gid=1114379024">
                                         <img src="../assets/images/pg1.jpeg" width="600" height="600" loading="lazy"
                                             alt="Walking On Air" class="img-cover">
                                     </a>
                                 </figure>
 
                                 <h3 class="h3 card-title">
-                                    <a href="#">PlayGroup</a>
+                                    <a href="https://docs.google.com/spreadsheets/d/1HPIPWDtYy9zlKF2Hz45iTSQ7F6udZZdT_TrXvHOjowg/edit#gid=1114379024">PlayGroup</a>
                                 </h3>
 
                                 <span class="card-author">
@@ -124,7 +124,7 @@
                                 <button class="btn">
                                     <ion-icon name="bag-add-outline" aria-hidden="true"></ion-icon>
 
-                                    <span><a href="#">Enter Result</a></span>
+                                    <span><a href="https://docs.google.com/spreadsheets/d/1HPIPWDtYy9zlKF2Hz45iTSQ7F6udZZdT_TrXvHOjowg/edit#gid=1114379024">Enter Result</a></span>
                                 </button>
 
                             </div>
