--- a/mid/pry.html
+++ b/mid/pry.html
@@ -290,7 +290,7 @@
                                 </figure>
 
                                 <h3 class="h3 card-title">
-                                    <a href="#">Kindergarten (KG)</a>
+                                    <a href="kg.html">Kindergarten (KG)</a>
                                 </h3>
 
                                 <span class="card-author">
@@ -306,7 +306,7 @@
                                 <button class="btn">
                                     <ion-icon name="bag-add-outline" aria-hidden="true"></ion-icon>
                                 
-                                    <span><a href="#">Enter Result</a></span>
+                                    <span><a href="kg.html">Enter Result</a></span>
                                 </button>
 
                             </div>
