--- a/mid/pry.html
+++ b/mid/pry.html
@@ -125,7 +125,7 @@
                                 </figure>
 
                                 <h3 class="h3 card-title">
-                                    <a href="#">PlayGroup</a>
+                                    <a href="pg.html">PlayGroup</a>
                                 </h3>
 
                                 <span class="card-author">
@@ -141,7 +141,7 @@
                                 <button class="btn">
                                     <ion-icon name="bag-add-outline" aria-hidden="true"></ion-icon>
 
-                                    <span><a href="#">Enter Result</a></span>
+                                    <span><a href="pg.html">Enter Result</a></span>
                                 </button>
 
                             </div>
