--- a/mid/pry.html
+++ b/mid/pry.html
@@ -582,7 +582,7 @@
 
                                 <figure class="card-banner">
                                     <a href="pry5.html">
-                                        <img src="./assets/images/auction-9.jpg" width="600" height="600" loading="lazy"
+                                        <img src="../assets/images/auction-9.jpg" width="600" height="600" loading="lazy"
                                             alt="Gaming Chair" class="img-cover">
                                     </a>
                                 </figure>
@@ -615,7 +615,7 @@
 
                                 <figure class="card-banner">
                                     <a href="pry5.html">
-                                        <img src="./assets/images/auction-9.jpg" width="600" height="600" loading="lazy"
+                                        <img src="../assets/images/auction-9.jpg" width="600" height="600" loading="lazy"
                                             alt="Gaming Chair" class="img-cover">
                                     </a>
                                 </figure>
