--- a/mid/pry5.html
+++ b/mid/pry5.html
@@ -15,7 +15,7 @@
     <!-- 
     - custom css link
   -->
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 
     <!-- 
     - google font link
@@ -60,7 +60,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/Math.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/Math.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -99,7 +99,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/Eng.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/Eng.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -139,7 +139,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/Q.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/Q.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -179,7 +179,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/verbal.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/verbal.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -219,7 +219,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/sci.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/sci.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -259,7 +259,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/computer.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/computer.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -299,7 +299,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/values.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/values.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -339,7 +339,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/pre.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/pre.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -379,7 +379,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/Security.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/Security.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -419,7 +419,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/cultural.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/cultural.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -459,7 +459,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/clli.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/clli.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -497,7 +497,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/history.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/history.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -537,7 +537,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/Music.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/Music.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -577,7 +577,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/Language.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/Language.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -617,7 +617,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/Eng.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/Eng.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -657,7 +657,7 @@
 
                                 <figure class="product-banner">
 
-                                    <img src="./assets/images/crk.jpeg" alt="Dimond riding a blue body art">
+                                    <img src="../assets/images/crk.jpeg" alt="Dimond riding a blue body art">
 
                                     <div class="product-actions">
                                         <button class="product-card-menu">
@@ -721,7 +721,7 @@
     <!-- 
     - custom js link
   -->
-    <script src="./assets/js/script.js"></script>
+    <script src="../assets/js/script.js"></script>
 
     <!-- 
     - ionicon link
